<resources>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>
    <string name="login">Log in</string>
    <string name="emailSender">Email\n</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to log in</string>
    <string name="click_to_register">Click to register</string>
    <string name="search_in_mail">Search in mail</string>
    <string name="log_in">Log In</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_log_in_with_your_information">Please log in with your information</string>
    <string name="remember_me">Remember me</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="space">Space</string>
    <string name="meet">Meet</string>
    <string name="search_in_chat_and_spaces">Search in chat and spaces</string>
    <string name="compose">Compose</string>
    <string name="new_chat">New chat</string>
    <string name="please_register_with_your_information">Please register with your information</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="to_me">to me</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="forward">Forward</string>
    <string name="inbox">INBOX</string>
    <string name="chat_1">CHAT</string>
    <string name="find_someone_to_chat_with_by_tapping_the_new_chat_button">Find someone to chat with by tapping the new chat button.</string>
    <string name="inbox_1">Inbox</string>
    <string name="lables">LABLES</string>
    <string name="starred">Starred</string>
    <string name="sent">Sent</string>
    <string name="snoozed">Snoozed</string>
    <string name="all_mail">All mail</string>
    <string name="spam">Spam</string>
    <string name="settings">Settings</string>
    <string name="settings_1">Settings</string>
    <string name="log_out">Log out</string>
    <string name="from">From</string>
    <string name="me">me</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rachel_jacobs">Rachel Jacobs</string>
    <string name="_47_emails">47 emails</string>
    <string name="read_later">Read later</string>
    <string name="_16_emails">16 emails</string>
    <string name="_245_emails">245 emails</string>
    <string name="_14_emails">14 emails</string>
    <string name="trash">Trash</string>
    <string name="default123">Default</string>
    <string name="user_name">Rachel Jacobs</string>
    <string name="main_name">Helena</string>
    <string name="time_sent">40m ago</string>
    <string name="content">
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet consectetur adipiscing elit duis tristique. Enim lobortis scelerisque fermentum dui faucibus in ornare. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Risus feugiat in ante metus dictum. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Adipiscing tristique risus nec feugiat in. Nibh praesent tristique magna sit amet purus gravida. Egestas diam in arcu cursus euismod quis viverra nibh cras. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Rhoncus mattis rhoncus urna neque viverra justo nec. Quisque non tellus orci ac. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Sed tempus urna et pharetra.
</string>
    <string name="profile_desc">handsome</string>
    <string name="app_name">Gmail\n</string>
    <string name="email_subject">
What is your opinion about this boss?
</string>
    <string name="email_content">
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet consectetur adipiscing elit duis tristique. Enim lobortis scelerisque fermentum dui faucibus in ornare. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Risus feugiat in ante metus dictum. Iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Adipiscing tristique risus nec feugiat in. Nibh praesent tristique magna sit amet purus gravida. Egestas diam in arcu cursus euismod quis viverra nibh cras. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Rhoncus mattis rhoncus urna neque viverra justo nec. Quisque non tellus orci ac. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Sed tempus urna et pharetra.
</string>
    <string name="email_name">Kristopher Cremin</string>
    <string name="forwardText">Forward</string>
    <string name="replyText">Reply</string>
    <string name="backbtn">backBtn</string>
    <string name="btnforword">btnForword</string>
    <string name="profileimage">profileImage</string>
    <string name="_1h_ago">1h ago</string>
    <string name="kris13_gmail_com">kris13@gmail.com</string>
    <string name="menubtm">menuBtm</string>
    <string name="trashbtn">Trashbtn</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>

    <!-- Settings -->
    <string name="button_back">A button to go back</string>

    <string name="label_appearance">Appearance</string>

    <string name="label_notifications">Notifications</string>
    <string name="switch_push_notifications">Push notifications</string>
    <string name="switch_sound">Sound</string>
    <string name="switch_notifications_summary">Notifications summary</string>

    <string name="label_performance">Performance</string>
    <string name="switch_high_res_img">High resolution images</string>
    <string name="switch_auto_downloads">Automatic downloads</string>
    <string name="switch_limit_data">Limit data usage</string>

    <string name="label_search_history">Search history</string>

    <string name="label_clear_his">Clear search history</string>

    <!-- Write Activity -->
    <string name="write">Write</string>
    <string name="back">Back</string>
    <string name="more_option">More Options</string>
    <string name="send_mail">Send EMail</string>
    <string name="add_file">Add File</string>
    <string name="from_email">From: </string>
    <string name="to_email">To: </string>
    <string name="subject_email">Subject: </string>
    <string name="hint">Email subject </string>

    <string name="recipient_email">Recipient email</string>
    <string name="your_email">Your Email</string>
    <string name="drop_down">Dropdown</string>
    <string name="email_body_hint">Email body</string>

    <!-- Auth Activity -->
    <string name="client_id">1090608125846-qon86vtqa3srhekp2i8cqvctmderk2gm.apps.googleusercontent.com</string>
    <string name="init_message1">You can now add all your gmail addresses.</string>
    <string name="init_message2">Add a gmail address</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!-- Home Activity -->
    <string name="profile" />
    <string name="search_email" />
    <string name="mail_icon" />
    <string name="video_icon" />

    <!-- HelpFeedbackActivity -->
    <string name="popular_support_post">Popular support post</string>
    <string name="send_feedback">Send Feedback</string>

</resources>