<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_read_mail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">
    
    <include layout="@layout/toolbar_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="550dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backButton">

                <LinearLayout
                    android:id="@+id/userProfileLayout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/profileimage"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/profile_picture1"
                        android:src="@drawable/profile_picture1" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp">


                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email_name"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/userEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBaseline="@+id/userName"
                            android:layout_alignParentEnd="true"
                            android:text="@string/kris13_gmail_com"
                            android:textColor="#808080"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/timeAgo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/userName"
                            android:text="@string/_1h_ago"
                            android:textColor="#808080"
                            android:textSize="14sp" />

                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/email_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/email_subject"
                    android:textAppearance="@style/email_subject"/>

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lineSpacingExtra="5sp"
                    android:text="@string/email_content"
                    android:textAppearance="@style/email_content"
                    android:translationY="-2.65sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/mailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:paddingHorizontal="30dp">

            <Button

                android:id="@+id/forwardBtn"
                android:contentDescription="@string/btnforword"
                style="@style/ReplyForward"
                android:text="@string/forwardText"
                android:drawableStart="@drawable/forward_icon"
                android:backgroundTint="@color/button_background"
                android:textColor="@color/btn_bg"/>

            <Button

                android:id="@+id/replyBtn"
                style="@style/ReplyForward"
                android:drawableStart="@drawable/reply_icon"
                android:text="@string/replyText"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/light_red"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <!-- content -->

</LinearLayout>