<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activity.WriteActivity">

    <include layout="@layout/toolbar_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:background="#FDEDED"
        android:paddingHorizontal="12dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#CCC"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/to"
                android:background="@android:color/transparent"
                android:paddingStart="12dp"
                android:textColorHint="#8B8B8B" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="#611717"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/from"
                android:background="@android:color/transparent"
                android:paddingStart="12dp"
                android:textColorHint="#8B8B8B" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#CCC"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:hint="@string/subject"
                android:background="@android:color/transparent"
                android:paddingStart="12dp"
                android:textColorHint="#8B8B8B" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#FFFFFF"
            app:boxStrokeColor="#CCC"
            app:hintEnabled="false"
            app:hintTextAppearance="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:hint="Compose email"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:paddingStart="12dp"
                android:textColorHint="#8B8B8B" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_gravity="bottom">


        <Button
            android:id="@+id/addFiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red_icon_bg"
            android:text="Add files"
            android:textColor="#611717"
            android:drawableLeft="@drawable/paper_clip"
            android:drawablePadding="8dp"
            android:paddingVertical="12dp"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/sendBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#D9534F"
            android:text="Send"
            android:textColor="#FFFFFF"
            android:drawableLeft="@drawable/send"
            android:drawablePadding="14dp"
            android:paddingVertical="12dp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</LinearLayout>
